cluster/apps/infrastructure/keycloak/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: ca-issuer
    cert-manager.io/common-name: "Keycloak"
    cert-manager.io/subject-organizations: "HERMLEIGH.HOME"
    cert-manager.io/subject-organizationalunits: "Kubernetes Cluster Seawolf,Infrastructure"
    cert-manager.io/subject-countries: "US"
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/auth-tls-verify-client: "optional_no_ca"
    nginx.ingress.kubernetes.io/auth-tls-secret: infrastructure/kube-root-ca.crt
    nginx.ingress.kubernetes.io/auth-tls-verify-depth: "1"
    nginx.ingress.kubernetes.io/auth-tls-pass-certificate-to-upstream: "true"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/icon: https://avatars.githubusercontent.com/u/4921466?s=48&v=4
    gethomepage.dev/name: Keycloak
    gethomepage.dev/description: "Single-Sign On Provider"
    gethomepage.dev/group: Infrastructure
  labels:
    app: keycloak
    app.kubernetes.io/instance: keycloak
    app.kubernetes.io/managed-by: keycloak-operator
  name: keycloak-ingress
  namespace: infrastructure
spec:
  ingressClassName: nginx
  rules:
  - host: &host keycloak.hermleigh.home
    http:
      paths:
      - backend:
          service:
            name: keycloak-service
            port:
              number: &port 8443
        pathType: ImplementationSpecific
  defaultBackend:
    service:
      name: keycloak-service
      port:
        number: *port
  tls:
    - hosts:
        - *host
      secretName: keycloak-tls-ingress
